k8s/keycloak/keycloak-acme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-acme
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Отключаем перенаправление на HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: msv-tech.ru
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: ImplementationSpecific # Используем ImplementationSpecific для точного соответствия
            backend:
              service:
                name: nginx # Сервис, который обслуживает статические файлы
                port:
                  number: 80
